# checklist

./: .gitignore  Cargo.toml  README.md  checklist_test.txt  specification.txt
.github/workflows/: ci.yaml
src/: lib.rs  main.rs
