[package]
name = "checklist"
version = "0.1.0"
edition = "2024"
license = "GPLv3"
description = "A simple checklist CLI to organize your TODOs."
readme = "README.md"
repository = "https://github.com/RolandNeuber/checklist"
keywords = ["console", "todo", "checklist", "cli"]
categories = ["command-line-utility"]

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
